<resources>
    <string name="app_name">Eventos Culturales en Salamanca</string>
    <string name="favoritos">Favoritos</string>
    <string name="ver_detalles">Ver detalles</string>
    <string name="compartir">Compartir</string>
    <string name="modificar_favorito">Modificar favorito</string>
    <string name="eventos_salamanca">EVENTOS EN SALAMANCA</string>
    <string name="calendario">CALENDARIO</string>
    <string name="solo_eventos_gratuitos">Solo eventos gratuitos</string>
    <string name="textviewfecha">textViewFecha</string>
    <string name="fecha">Fecha: </string>
    <string name="lugar">Lugar: </string>
    <string name="precio">Precio: </string>
    <string name="titulo_evento">titulo evento</string>
    <string name="guardar">GUARDAR</string>
    <string name="volver">VOLVER</string>
    <string name="descripcion">Descripción: </string>
    <string name="nombre">Nombre: </string>
    <string name="elige_aplicacion">Compartir...</string>
    <string name="eventos_favoritos">EVENTOS FAVORITOS</string>
    <string name="notas">Notas: </string>
    <string name="escribe_tus_notas_aqu">Escribe tus notas aquí</string>
    <string name="guardar_notas">GUARDAR</string>
    <string name="tituloDialog">Sin reultados</string>
    <string name="mensajeDialog">No hay eventos que coincidan con los filtros seleccionados</string>
    <string name="botonAceptarDialog">Aceptar</string>
    <string name="aniadir_a_calendario">Añadir a calendario</string>
    <string name="no_aniadido_evento">No se ha podido añadir el evento</string>
    <string name="permiso_denegado_al_calendario">Permiso denegado para acceder al calendario</string>
    <string name="mira_este_evento">¡Mira este evento!</string>
    <string name="no_hay_aplicacion_instalada">No hay ninguna aplicación instalada para enviar este mensaje</string>
    <string name="evento_aniadido_al_calendario">Evento añadido al calendario</string>
    <string name="favorito">Favorito:</string>
    <string name="selecciona_opcion">Selecciona una opción</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="log_in">Log in</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registro"><u>Regístrate</u></string>
    <string name="nombre_apellidos">Nombre y Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="formulario_registro">FORMULARIO PARA REGISTRARSE:</string>
    <string name="politica_privacidad">Al pulsar en guardar aceptas las Condiciones de uso y la Política de Provacidad y Protección de Datos</string>
    <string name="cancelar">CANCELAR</string>
    <string name="se_deben_completar_todos_los_campos">Se deben completar todos los campos</string>
    <string name="usuario_registrado">Usuario registrado</string>
    <string name="el_usuario_ya_registrado">El usuario ya está registrado</string>
    <string name="no_tienes_permisos_para_enviar_sms">No tienes permisos para enviar sms</string>
    <string name="el_nivel_de_bateria_est_por_debajo_del_5">¡El nivel de batería está por debajo del 5%!</string>
    <string name="mensaje_enviado">Mensaje enviado</string>
    <string name="se_ha_producido_un_error_al_enviar_el_mensaje">Se ha producido un error al enviar el mensaje</string>
    <string name="permiso_para_enviar_sms_concedido">Permiso para enviar sms concedido</string>
    <string name="permiso_para_enviar_sms_denegado">Permiso para enviar sms denegado</string>
    <string name="activar_o_desactivar_sonido">Activar o desactivar sonido</string>
    <string name="se_ha_dado_de_alta_al_usuario">Se ha dado de alta al usuario</string>
    <string name="ajustes">Ajustes</string>
    <string name="configuracion">Configuración</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usuario_eliminado">Usuario eliminado</string>
    <string name="eliminar_usuario">Eliminar usuario</string>
    <string name="seguro_que_deseas_eliminar_este_usuario">¿Seguro que deseas eliminar este usuario?</string>
    <string name="se_ha_dadjo_de_baja_al_susuario">Se ha dadjo de baja al susuario</string>
    <string name="permiso_para_acceder_a_la_agenda_denegado">Permiso para acceder a la agenda denegado</string>
</resources>