<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:weightSum="100"
    tools:context=".DetalleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="85">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTituloDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="true"
                android:layout_marginTop="20dp"
                android:text="@string/titulo_evento"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewFechaDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/fecha"
                android:layout_marginTop="20dp"/>

            <ImageView
                android:id="@+id/imageViewFotoDetalle"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/textViewLugarDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/lugar"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/textViewPrecioDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/precio"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/textViewDescripcionDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/descripcion"
                android:justificationMode="inter_word"
                android:layout_marginTop="10dp"/>

            <RatingBar
                android:id="@+id/ratingBarDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:stepSize="0.5"
                android:layout_marginTop="10dp"/>



        </LinearLayout>

    </ScrollView>

    <Switch
        android:id="@+id/switchFavoritoDetalle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        tools:ignore="UseSwitchCompatOrMaterialXml"/>
    


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/buttonGuardarDetalle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/guardar"/>

        <Button
            android:id="@+id/buttonVolverDetalle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/volver"/>

    </LinearLayout>


</LinearLayout>