<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".ui.FavoritosActivity">

    <ScrollView
        android:id="@+id/scrollViewFavoritos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/LinearLayoutFavoritos">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTituloFavoritos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/eventos_favoritos"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="22sp"
                android:gravity="center_horizontal"
                android:layout_gravity="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewFavoritos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/textViewNotasFavoritos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notas"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"/>

            <EditText
                android:id="@+id/editTextNotasFavoritos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:inputType="textImeMultiLine"
                android:textSize="18sp"
                android:hint="@string/escribe_tus_notas_aqu"
                android:layout_marginBottom="15dp"/>



        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/LinearLayoutFavoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/buttonGuardarFavoritos"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/guardar_notas"/>

        <Button
            android:id="@+id/buttonVolverFavoritos"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/volver"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
